- legacy iPad hamburger menu style (change to grid) - Preload menu chevrons (fix for Menu is interactive before chevrons are visible) - data-clickable-url function respects shift/cmd-click for opening in new window/tab - Accordion/Show-Hide plus/minus icons  - Plus/minus icons display incorrectly when using keyboard navigation - change from underline to outline

--- a/src/sass/design/common/_nav.scss
+++ b/src/sass/design/common/_nav.scss
@@ -442,8 +442,8 @@ $breakpoint-large: 68rem;
   align-items: center;
   gap: 6px;
   width: 40px;
-  height: 40px;
-  display: flex;
+  height: 37px;
+  display: grid;
   position: absolute;
   top: 15px;
   right: 5%;
